# tests

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/quadratic_solver/: __init__.py  solver.py
src/quadratic_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_solver.py
